--- a/Server API/views/index.ejs
+++ b/Server API/views/index.ejs
@@ -20,6 +20,7 @@
     <a href="/posts" class="btn btn-default">Posts</a>
     <a href="/category" class="btn btn-default">Categories</a>
     <a href="/comments" class="btn btn-default">Comments</a>
+    <a href="/userSchema2" class="btn btn-default">userSchema2</a>
 </div>
 
 </div>
